# hedgehog-arr

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  fourmolu.yaml  hedgehog-arrow.cabal  icfp-26-artifact.tar.xv
ast-size/: CHANGELOG.md  LICENSE  ast-size.cabal
ast-size/app/: Main.hs
extra/: OnTheNose.hs
hedgehog-arr/: LICENSE  fourmolu.yaml  hedgehog-arrow.cabal
hedgehog-arr/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hedgehog-arr/dist-newstyle/packagedb/ghc-9.10.3/: hedgehog-arrow-0.1.0.0-inplace.conf  package.cache
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/: changelog.md  text.cabal
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/cbits/: measure_off.c
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/scripts/: Arsec.hs  CaseFolding.hs  CaseMapping.hs  SpecialCasing.hs  UnicodeData.hs
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/simdutf/: hs_simdutf.c  simdutf.cpp  simdutf.h  simdutf_c.h
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/src/Data/: Text.hs
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/src/Data/Text/: Array.hs  Encoding.hs  Foreign.hs  IO.hs  Internal.hs  Lazy.hs
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/src/Data/Text/Encoding/: Error.hs
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/src/Data/Text/IO/: Utf8.hs
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/src/Data/Text/Internal/: Builder.hs  IO.hs  Lazy.hs  Transformation.hs
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/src/Data/Text/Internal/Encoding/: Utf8.hs
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/src/Data/Text/Lazy/: Encoding.hs
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/tests/Tests/: Lift.hs  QuickCheckUtils.hs  RebindableSyntaxTest.hs  Regressions.hs  ShareEmpty.hs  Utils.hs
hedgehog-arr/dist-newstyle/tmp/src-1279273/text-2.1.4/tests/Tests/Properties/: Folds.hs  LowLevel.hs  Text.hs
hedgehog-arr/src/Hedgehog/: Arrow.hs
hedgehog-arr/src/Hedgehog/Arrow/: Gen.hs  Prelude.hs
hedgehog-arr/test/: Main.hs
hedgehog-arr/test/Test/Example/: Basic.hs  Confidence.hs  Coverage.hs  Exception.hs  QuasiShow.hs  Resource.hs  Roundtrip.hs  STLC.hs
src/Hedgehog/: Arrow.hs
test/Test/Example/: Basic.hs  Confidence.hs  Coverage.hs  Exception.hs  Resource.hs  STLC.hs
(+1 files in other folders)
