cabal-version: 3.0
name: hedgehog-arrow
version: 0.1.0.0
synopsis: An arrow-based interface for implementing Hedgehog generators
-- description:
license: BSD-3-Clause
license-file: LICENSE
author: anonymous
maintainer: anonymous@gmail.com
copyright: © 2026 anonymous
category: Testing
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common default
  ghc-options: -Wall
  default-language: Haskell2010

  build-depends:
    arrows >=0.4 && <0.5,
    base >=4.18 && <4.19,
    bytestring >=0.11 && <0.12,
    containers >=0.6 && <0.7,
    deepseq >=1.4 && <1.5,
    hedgehog >=1.7 && <1.8,
    mtl >=2.3 && <2.4,
    text >=2.1 && <2.2,
    transformers >=0.6 && <0.7,

library
  import: default
  hs-source-dirs: src
  exposed-modules:
    Hedgehog.Arrow
    Hedgehog.Arrow.Gen
    Hedgehog.Arrow.Prelude

test-suite test
  import: default
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options:
    -threaded
    -Wall

  other-modules:
    Test.Example.Basic
    Test.Example.Confidence
    Test.Example.Coverage
    Test.Example.EvalNF
    Test.Example.Exception
    Test.Example.QuasiShow
    Test.Example.Resource
    Test.Example.Roundtrip
    Test.Example.STLC

  build-depends:
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.5,
    hashable >=1.5 && <1.6,
    hashtables >=1.4 && <1.5,
    hedgehog-arrow,
    lifted-base >=0.2 && <0.3,
    mmorph >=1.2 && <1.3,
    parsec >=3.1 && <3.2,
    process >=1.6 && <1.7,
    resourcet >=1.3 && <1.4,
    template-haskell >=2.20 && <2.25,
    temporary >=1.3 && <1.4,
    temporary-resourcet >=0.1 && <0.2,

  hs-source-dirs: test
