cabal-version:      3.0
name:               ast-size
version:            0.1.0.0
synopsis:           Computes the size of the abstract syntax tree of a Haskell file.
description:        Computes the size of the abstract syntax tree of a Haskell file.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Anonymous
maintainer:         Anonymous
copyright:          Anonymous
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable ast-size
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:    base ^>=4.17 || ^>=4.18, ghc, ghc-paths, syb
  hs-source-dirs:   app
  default-language: Haskell2010
